--- a/Arms+Shoulders.html
+++ b/Arms+Shoulders.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Effect of Ai</title>
     <link rel="stylesheet" href="Arms+Shoulders.css">
 </head>
 <body>
@@ -15,7 +14,7 @@
                 
                 <span class="param"></span>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="Home.html">Home</a></li>
                     <li><a href="Chest+Back.html">Chest+Back</a></li>
                     <li><a href="Arms+Shoulders.html">Arms+Shoulders</a></li>
                     <li><a href="Legs.html">Legs</a></li>
@@ -35,7 +34,7 @@
             </ul>
         </div>
         <h2>Dumbbell Lateral Raises</h2>
-        <p>test
+        <p>Dumbbell lateral raises target your deltoids.  Although Dumbbell Lateral Raises are a simple exercise, they could cause harm if done incorrectly, so make sure to watch the video below for proper form
         </p>
         <h2>Incline dumbbell curl</h2>
         <p>test
