--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <div class="links">
 
         
-        <nav class="navbar">
+        <nav class="stylist">
             <a href="#" class="nav">
                 <div class="one"></div>
                 <div class="two"></div>
@@ -20,7 +20,7 @@
                 
             </a>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="Chest+Back.html">Chest+Back</a></li>
                 <li><a href="Arm+Shoulders.html">Arms+Shoulders</a></li>
                 <li><a href="Legs.html">Legs</a></li>
@@ -35,7 +35,12 @@
         <p>Copyright &copy; Ethan Zhong</p>
         <p>Background gif-Berosaman Tenor</p>
     </footer>
-
-
+    <div class ="forms"><div>
+        <form id="form">
+            <h3>Let me know if you have any questions!</h3>
+            <input type="text" id="questions" placeholder ="question" required>
+            <button type="submit">Submit</button>
+        </form>
+     </div>
 </body>
 </html>
